[gd_scene load_steps=3 format=3 uid="uid://deeudqwery4ak"]

[ext_resource type="Script" uid="uid://cky5w3xueajtj" path="res://Level Assets/warpPoint.gd" id="1_4hlmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cq3jf"]
size = Vector2(32, 32)

[node name="WarpPoint" type="Marker2D"]
script = ExtResource("1_4hlmi")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_cq3jf")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
